# Auto_attack_robot

./: README.md  main.cpp
C++/: CMakeLists.txt  FRAME_RATE_ANALYSIS.md  MVS_INTEGRATION_GUIDE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_UPDATE.md  QUICK_START_MVS.md  README.md  analyze_frame_rate.sh  benchmark_tensorrt.cpp  build.bat  build.sh  check_cuda  check_cuda.cpp  check_model_performance.py  convert_to_tensorrt.py  message  optimize_model.py  quick_performance_check.sh  setup_opencv_env.sh  x86_64
C++/config/: config.yaml
C++/include/camera/: mvs_camera.h
C++/include/can/: can_protocol.h
C++/include/detection/: yolo_detector.h  yolo_detector_tensorrt.h
C++/include/gimbal/: gimbal_controller.h
C++/include/serial/: serial_comm.h
C++/include/utils/: config.h  frame_buffer.h  logger.h  thread_optimizer.h
C++/src/: main.cpp
C++/src/camera/: mvs_camera.cpp
C++/src/can/: can_protocol.cpp
C++/src/detection/: yolo_detector.cpp  yolo_detector_tensorrt.cpp
C++/src/gimbal/: gimbal_controller.cpp
C++/src/serial/: serial_comm.cpp
C++/src/utils/: config.cpp  logger.cpp  thread_optimizer.cpp
